<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DiscFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sobre_disc"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"/>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_sobre_D"
                            android:textAlignment="center"
                            android:textColor="#FF3636"
                            android:background="#FFDFDF"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sobre_D"
                            android:textColor="#fff"
                            android:textAlignment="center"
                            android:background="#E94E40"
                            android:paddingTop="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_sobre_I"
                            android:textAlignment="center"
                            android:textColor="#ff9f01"
                            android:background="#FFEBCF"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sobre_I"
                            android:textColor="#fff"
                            android:textAlignment="center"
                            android:background="#F19C2F"
                            android:paddingTop="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_sobre_S"
                            android:textAlignment="center"
                            android:textColor="#0bc600"
                            android:background="#E6FFCF"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sobre_S"
                            android:textColor="#fff"
                            android:textAlignment="center"
                            android:background="#10C465"
                            android:paddingTop="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_sobre_C"
                            android:textAlignment="center"
                            android:textColor="#004cd7"
                            android:background="#CFF7FF"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sobre_C"
                            android:textColor="#fff"
                            android:textAlignment="center"
                            android:background="#15B2E0"
                            android:paddingTop="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="10dp"/>

                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>