<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.NovaPessoaActivity"
    tools:showIn="@layout/activity_nova_pessoa">

    <LinearLayout
        android:id="@+id/layout_cima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shadow_border_bottom">

        <EditText
            android:id="@+id/editNomePessoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escolher_nome_pessoa"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/escolha_questoes"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listViewQuestoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_cima"
        android:layout_above="@id/layout_baixo">
    </ListView>

    <LinearLayout
        android:id="@+id/layout_baixo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shadow_border_top"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_nova_pessoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/criar_nova_pessoa"
            android:onClick="criarNovaPessoa"/>

    </LinearLayout>

</RelativeLayout>